电子期刊列表hideloading

--- a/html/periodical.html
+++ b/html/periodical.html
@@ -48,6 +48,7 @@
 						jsonData.file = file;
 						console.log(jsonData);
 						renderDetail();
+						$.hori.hideLoading();
 					},
 					"error" : function(res) {
 						$.hori.hideLoading();
