--- a/html/forgetPwd.html
+++ b/html/forgetPwd.html
@@ -129,7 +129,7 @@ a {
 								<input type="hidden" id="mobile_number" name="mobile_number" value=""/>
 								<input type="text" name="user_name"
 									style="outline: none; width: 100%; border: 0; background: transparent;"
-									id="user_name" value="geyuxi" onfocus="clearData()"
+									id="user_name" value="" onfocus="clearData()"
 									onblur="showTips()" /></td>
 							</tr>
 						</table>
@@ -142,7 +142,7 @@ a {
 								</td>
 								<td><input type="text" name="cn_name"
 									style="outline: none; width: 100%; border: 0; background: transparent;"
-									id="cn_name" value="葛玉喜" /></td>
+									id="cn_name" value="" /></td>
 							</tr>
 						</table>
 					</li>
@@ -153,7 +153,7 @@ a {
 								<td><strong>身份证号:</strong></td>
 								<td><input type="text" name="id_number"
 									style="outline: none; width: 100%; border: 0; background: transparent;"
-									id="id_number" value="220882198401195538" /></td>
+									id="id_number" value="" /></td>
 							</tr>
 						</table>
 					</li>
