--- a/html/bi/lrwc.html
+++ b/html/bi/lrwc.html
@@ -126,7 +126,9 @@ a {
 						},
 						axisLabel : { // 坐标轴文本标签，详见axis.axisLabel
 							textStyle : { // 其余属性默认使用全局文本样式，详见TEXTSTYLE
-								color : '#FFFFFF'
+								color : 'black',
+								fontWeight : 'bolder',
+								fontSize : 14
 							}
 						},
 						splitLine : { // 分隔线
