--- a/html/bi/srwc.html
+++ b/html/bi/srwc.html
@@ -107,7 +107,7 @@ a {
 					series : [ {
 						name : '收入完成',
 						type : 'gauge',
-						startAngle : 179,
+						startAngle : 180,
 						endAngle : 0,
 						splitNumber : 4, // 分割段数，默认为5
 						max : ww,
@@ -130,7 +130,9 @@ a {
 						},
 						axisLabel : { // 坐标轴文本标签，详见axis.axisLabel
 							textStyle : { // 其余属性默认使用全局文本样式，详见TEXTSTYLE
-								color : '#FFFFFF'
+								color : 'black',
+								fontWeight : 'bolder',
+								fontSize : 14
 							}
 						},
 						splitLine : { // 分隔线
