--- a/html/bi/srbk.html
+++ b/html/bi/srbk.html
@@ -82,7 +82,7 @@ a {
 				animation : false,
 				tooltip : {
 					trigger : 'item',
-					formatter : "{a} <br/>{b} : {c} ({d}%)"
+					formatter : "{b} <br/> {c} ({d}%)"
 				},
 				color : [ '#e40218', '#fdf001', '#b5c606', '#32cd32',
 						'#76c7c0', '#1596ab', '#e98434', '#409736', '#ff6600',
