修改ipad.html页面中对四个条目的隐藏

--- a/html/ipad.html
+++ b/html/ipad.html
@@ -45,7 +45,7 @@
 				<li data-corners="false" data-shadow="false" data-iconshadow="true"
 					data-wrapperels="div" data-icon="arrow-r" data-iconpos="right"
 					data-theme="c" class="ui-btn  ui-li-has-arrow ui-li ui-btn-up-c"><div
-						class="ui-btn-inner ui-li" id="gwdb" style="display:none;">
+						class="ui-btn-inner ui-li" id="gwdb" style="">
 						<div class="ui-btn-text  left_module" style="text-align: center;">
 							<a onclick="loadTask()" class="ui-link-inherit"><img
 								src="../assets/home/gwdb.png" class="icon" /></a> <br> <span>公文待办</span>
@@ -55,7 +55,7 @@
 					data-wrapperels="div" data-icon="arrow-r" data-iconpos="right"
 					data-theme="c"
 					class="ui-btn ui-btn-up-c  ui-li-has-arrow ui-li ui-last-child"><div
-						class="ui-btn-inner ui-li" id="gwcy" style="display:none;">
+						class="ui-btn-inner ui-li" id="gwcy" style="">
 						<div class="ui-btn-text  left_module" style="text-align: center;">
 							<a onclick="loadqueryList()" href="#" class="ui-link-inherit"><img
 								src="../assets/home/gwcy.png" class="icon" /></a> <br> <span>公文查阅</span>
@@ -64,7 +64,7 @@
 				<li data-corners="false" data-shadow="false" data-iconshadow="true"
 					data-wrapperels="div" data-icon="arrow-r" data-iconpos="right"
 					data-theme="c" class="ui-btn ui-btn-up-c  ui-li-has-arrow ui-li"><div
-						class="ui-btn-inner ui-li" id="jysj" style="display:none;">
+						class="ui-btn-inner ui-li" id="jysj" style="">
 						<div class="ui-btn-text  left_module" style="text-align: center;">
 							<a onclick="loadMiddleBIContent()" class="ui-link-inherit"><img
 								src="../assets/home/jysj.png" class="icon" /></a> <br> <span>经营数据</span>
@@ -73,7 +73,7 @@
 				<li data-corners="false" data-shadow="false" data-iconshadow="true"
 					data-wrapperels="div" data-icon="arrow-r" data-iconpos="right"
 					data-theme="c" class="ui-btn ui-btn-up-c  ui-li-has-arrow ui-li"><div
-						class="ui-btn-inner ui-li" id="aqsc" style="display:none;">
+						class="ui-btn-inner ui-li" id="aqsc" style="">
 						<div class="ui-btn-text  left_module" style="text-align: center;">
 							<a href="#" onClick="loadAqscList()" class="ui-link-inherit"><img
 								src="../assets/home/aqsc.png" class="icon" /></a> <br> <span>安全生产</span>
