--- a/html/contact.html
+++ b/html/contact.html
@@ -1,68 +1,70 @@
 
 <html>
 <head>
-	<title>通讯录</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<title>通讯录</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0"/>
+<meta name="viewport"
+	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0" />
 
-	<link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" /> 
+<link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" />
 
-	<link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" /> 
+<link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
 
-	
-	<script src="../lib/jquery/jquery.min.js"></script>		
-	<script src="../lib/jquery-cookie/jquery.cookie.js"></script>	
-	<script src="../lib/encrypt/encrypt.js"></script>
-	<script src="../lib/json/json2.js"></script>
-	<script src="../lib/hori/hori.js?tag=21369"></script>
-	<script src="../config/web/config.js"></script>
 
-	<script src="../lib/knockout/knockout.js"></script>	
-	<script src="../lib/knockout/knockout.mapping.js"></script>	
-	<script src="../lib/app/contact/app.js"></script>
-	<script src="../lib/app/contact/contactViewModel.js"></script>
-	<script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
+<script src="../lib/jquery/jquery.min.js"></script>
+<script src="../lib/jquery-cookie/jquery.cookie.js"></script>
+<script src="../lib/encrypt/encrypt.js"></script>
+<script src="../lib/json/json2.js"></script>
+<script src="../lib/hori/hori.js?tag=21369"></script>
+<script src="../config/web/config.js"></script>
+
+<script src="../lib/knockout/knockout.js"></script>
+<script src="../lib/knockout/knockout.mapping.js"></script>
+<script src="../lib/app/contact/app.js"></script>
+<script src="../lib/app/contact/contactViewModel.js"></script>
+<script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
 </head>
 <body>
 	<div id="list" data-role="page" class="type-home">
-		<div data-role="content" >
-					
-			<div style="margin-left: 15px;">
-        <table>
-            <tr>
-                <td width="95%" height="20px"><input id="phonenumber" name="phonenumber"
-                                                     type="text" value="admin"/></td>
-                <td><a href="#search" data-role="button" data-inline="true"
-                       data-rel="dialog" data-corners="true" data-shadow="true"
-                       data-iconshadow="true" data-wrapperels="span" data-theme="f"
-                       class="ui-btn ui-shadow ui-btn-corner-all ui-btn-inline ui-btn-up-c ui-btn-up-f">
-							<span class="ui-btn-inner" style="width: 45px; height: 20px;"><span
-                                    class="ui-btn-text" style="color: white" onclick="app.searchContact()">搜索</span></span>
-                </a></td>
-            </tr>
-        </table>
-        </div>
+		<div data-role="content">
 
-			<div id="divContact" >
-				<ul data-bind="foreach: contactlist" data-role="listview" data-inset="true" >
-					<li>		
-					<font>ITCode：<span data-bind="text: ITCode"></span></font><br>
-					<font>用户名：<span data-bind="text: userName"></span></font><br>
-					<font>员工编号:<span data-bind="text: dialNumber"></span></font><br>
-					<font>移动电话：<span data-bind="text: telNumber"></span></font><br>
-					<font>办公电话：<span data-bind="text: officeNumber"></span></font><br>
-					
+			<div style="margin-left: 15px;">
+				<table>
+					<tr>
+						<td width="95%" height="20px"><input id="phonenumber"
+							name="phonenumber" type="text" value="admin" /></td>
+						<td><a href="#search" data-role="button" data-inline="true"
+							data-rel="dialog" data-corners="true" data-shadow="true"
+							data-iconshadow="true" data-wrapperels="span" data-theme="f"
+							class="ui-btn ui-shadow ui-btn-corner-all ui-btn-inline ui-btn-up-c ui-btn-up-f">
+								<span class="ui-btn-inner" style="width: 45px; height: 20px;"><span
+									class="ui-btn-text" style="color: white"
+									onclick="app.searchContact()">搜索</span></span>
+						</a></td>
+					</tr>
+				</table>
+			</div>
+
+			<div id="divContact">
+				<ul data-bind="foreach: contactlist" data-role="listview"
+					data-inset="true">
+					<li><font>ITCode：<span data-bind="text: ITCode"></span></font><br>
+						<font>用户名：<span data-bind="text: userName"></span></font><br>
+						<font>员工编号:<span data-bind="text: dialNumber"></span></font><br>
+						<font>移动电话：<span data-bind="text: telNumber"></span></font><br>
+						<font>办公电话：<span data-bind="text: officeNumber"></span></font><br>
+
 					</li>
 				</ul>
 			</div>
 		</div>
-		
+
 	</div>
-	
-	  
-	</body>
-	
+
+
+</body>
+
 
 </html>
 
