调试时加上的代码没有注销、、

--- a/html/bi/fxzk.html
+++ b/html/bi/fxzk.html
@@ -120,10 +120,10 @@ a {
 								+ "</span>"
 								+ "</div><ul style='padding:10px;list-style:none;'><li><div style='float:left;width:"+imgStringLiWidth+";'>&nbsp;</div><div style='float:left;width:"+imgStringDivWidth+";'>&nbsp;</div>";
 
-						 var monthdata1 = new Array(
+						 /* var monthdata1 = new Array(
 								"5月", "6月", "7月", "8月", "9月", "10月", "11月",
 								"12月", "1月", "2月", "3月", "4月","");
-						monthdata = monthdata1; 
+						monthdata = monthdata1;  */
 						for (var z = 0; z < monthdata.length; z++) {
 							if (monthdata[z].indexOf("1月") != -1
 									&& monthdata[z].length == 2) { //包含1月，添加id处理
