代码中有一些不影响效果但是多余的部分、已修改

--- a/html/bi/fxzk.html
+++ b/html/bi/fxzk.html
@@ -120,10 +120,10 @@ a {
 								+ "</span>"
 								+ "</div><ul style='padding:10px;list-style:none;'><li><div style='float:left;width:"+imgStringLiWidth+";'>&nbsp;</div><div style='float:left;width:"+imgStringDivWidth+";'>&nbsp;</div>";
 
-						 /* var monthdata1 = new Array(
-								"5月", "6月", "7月", "8月", "9月", "10月", "11月",
-								"12月", "1月", "2月", "3月", "4月","");
-						monthdata = monthdata1;  */
+						var monthdata1 = new Array("5月", "6月", "7月", "8月",
+								"9月", "10月", "11月", "12月", "1月", "2月", "3月",
+								"4月", "");
+						monthdata = monthdata1;
 						for (var z = 0; z < monthdata.length; z++) {
 							if (monthdata[z].indexOf("1月") != -1
 									&& monthdata[z].length == 2) { //包含1月，添加id处理
@@ -183,9 +183,7 @@ a {
 						imgString = imgString + "</ul>";
 						document.getElementById("light_wall").innerHTML = imgString;
 						//显示顶部年份
-						var monthWidth1 = monthWidth
-								* changeTipYearPosition(year, monthdata,
-										monthWidth);
+						changeTipYearPosition(year, monthdata);
 					},
 					"error" : function(res) {
 						alert("error:" + res);
@@ -195,7 +193,7 @@ a {
 	}
 
 	//显示顶部年份
-	function changeTipYearPosition(year, monthdata, monthWidth) {
+	function changeTipYearPosition(year, monthdata) {
 		//1月份显示div对象
 		var targetMonth = document.getElementById("targetMonth");
 		var firstMonth = document.getElementById("firstMonth");
