--- a/html/bi/fxzk.html
+++ b/html/bi/fxzk.html
@@ -32,6 +32,14 @@ a {
 	padding: 2px;
 	background-color: rgba(127, 127, 127, 0.5);
 }
+
+.top_year_first {
+	font-size: 14px;
+	position: absolute;
+	color: #FFF;
+	padding: 2px;
+	background-color: rgba(127, 127, 127, 0.5);
+}
 /*
 .big_light{
     width: 30px;
