修改安全生产页面的标题

--- a/html/zcfgz.html
+++ b/html/zcfgz.html
@@ -20,7 +20,7 @@
 		try {
 			var hori = $.hori;
 			/*设置标题*/
-			hori.setHeaderTitle("政策法规资讯");
+			hori.setHeaderTitle("安全生产");
 		} catch (e) {
 		}
 	});
